# Chessengine

./: .gitignore  ArchitectureDesign.md  CMakeLists.txt  ChessEngine
core/: Utils.h  main.cpp
core/board/: Board.h  Check.cpp  Check.h  Generate.cpp  Generate.h  GenerateCheck.cpp  GenerateCheck.h  Piece.cpp  Piece.h
core/engine/: Evaluation.cpp  Evaluation.h  Search.cpp  Search.h  Shell.cpp  Shell.h
web/: package-lock.json  package.json
web/client/: index.html  package-lock.json  vite.config.js
web/client/src/: App.css  App.jsx  index.css
web/server/: index.js
